--- a/src/styles/builder.css
+++ b/src/styles/builder.css
@@ -67,6 +67,21 @@ header {
   font-size: 18px; /* Tamaño del icono */
 }
 
+/* Active device button */
+.header-button.active {
+  position: relative;
+}
+
+.header-button.active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px; /* Adjust based on your design */
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff; /* White line */
+}
+
 /* Logout Button */
 .logout-button {
   background-color: #000000; /* Fondo negro */
